# geometrix

./: CMakeLists.txt  LICENSE  README.md
cmake/: geometrixConfig.cmake.in
include/: constants.hpp  geometry.hpp  lut_generator.hpp  matrix.hpp  matrix_implementation.hpp  optimizer.hpp  trigonometry.hpp  trigonometry_const.hpp  trigonometry_implementation.hpp
tests/: CMakeLists.txt  README.md  optimizerTests.cpp  test_generator.hpp  trigonometry_benchmark_results.txt  utility.hpp  utility_accuracy.hpp  utility_benchmark.hpp
tests/Matrix/: matrixTests.cpp
tests/Trigonometry/: sinCosTest.cpp  trigonometrixBench.cpp
tests/benchmarks/: bench_trigonometrix.cpp
tests/unit_tests/: test_optimizer.cpp
tests/unit_tests/matrix/: test_matrix.cpp
tests/unit_tests/trigonometry/: test_asin_acos.cpp  test_constexpr.cpp  test_sin_cos.cpp  test_tan_atan.cpp
